--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ matplotlib==3.5.1
 nltk==3.7
 numpy==1.21.5
 pandas==1.4.2
-python==3
+python>=3
 scikit_image==0.19.2
 scikit_learn==1.1.3
 scipy==1.7.3
