Changed UtteranceController behavior so that utterance objects and splits are separate, can now build utterance objects from file versus needing TaL corpus

--- a/conf.ini
+++ b/conf.ini
@@ -1,23 +1,33 @@
 [Run]
-make_features = False # whether or not to make new videos and run DLC. can set to False if CSV files already exist
+make_features = False 
+# whether or not to make new videos and run DLC. can set to False if CSV files already exist
 
 [Paths]
-tal_path = /home/rachel/Documents/thesis/samples/core # location of TaL80/core
-video_and_csv_path = /home/rachel/Documents/thesis/samples # where videos will be saved, and subsequently DLC will dump CSVs
-DLC_project = /home/rachel/Documents/thesis/DeepLabCut-for-Speech-Production # where you installed the DLC models
-beep_path = /home/rachel/Documents/thesis/.idea/beep/beep-1.0 # if you're using the BEEP dict, where you've downloaded it
+tal_path = /home/rachel/Documents/thesis/samples/core
+# location of TaL80/core
+video_and_csv_path = /home/rachel/Documents/thesis/samples 
+# where videos will be saved, and subsequently DLC will dump CSVs
+DLC_project = /home/rachel/Documents/thesis/DeepLabCut-for-Speech-Production 
+# where you installed the DLC models
+beep_path = /home/rachel/Documents/thesis/.idea/beep/beep-1.0 
+# if you're using the BEEP dict, where you've downloaded it
 
 [PreDLC]
 fps = 60
 
 [DLC]
-shuffle = 0 # which model of DLC to use, 0 or 1 (resnet or mobilenet)
+shuffle = 0 
+# which model of DLC to use, 0 or 1 (resnet or mobilenet)
 
 [PostDLC]
-beep = True # if you are using beep dict or CMUdict
-likelihood = True # filter options
+beep = True 
+# if you are using beep dict or CMUdict
+likelihood = True 
+# filter options
 outlier = True
 lowpass = True
 likelihood_cutoff = .1
-lowpass_cutoff = 20 # in Hz
-outlier_cutoff = 3 # number of stds from mean
+lowpass_cutoff = 20 
+# in Hz
+outlier_cutoff = 3 
+# number of stds from mean
